basex-core/src/main/java/org/basex/query/util/regex/parse/RegExParser.java
/* RegExParser.java */
/* Generated By:JavaCC: Do not edit this line. RegExParser.java */
package org.basex.query.util.regex.parse;

import static org.basex.query.QueryError.*;

import java.util.*;
import java.util.regex.*;

import org.basex.query.*;
import org.basex.query.util.regex.*;
import org.basex.util.*;
import org.basex.util.list.*;
import static org.basex.util.Token.*;
import static java.util.regex.Pattern.*;

/**
 * A parser for XSD regular expressions.
 *
 * @author BaseX Team, BSD License
 * @author Leo Woerteler
 */
@SuppressWarnings("all")
public class RegExParser implements RegExParserConstants {
  /** Group counter. */
  private int groups;
  /** Closed groups. */
  private final Map<Integer, Group> closed = new HashMap<Integer, Group>();
  /** Numbers of closed named groups. */
  private final Map<String, Integer> names = new HashMap<String, Integer>();
  /** Path of current atom: sequence numbers of branches and atoms currently being processed. */
  private Stack<Integer> atomPath = new Stack<Integer>();
  /** If the wildcard {@code .} matches any character. */
  private boolean dotAll;
  /** Multi-line matching mode, {@code ^} and {@code $} match on line bounds. */
  private boolean multiLine;
  /** Opened (positive) and closed (negative) capturing groups, in the order of the pattern. */
  private final IntList events = new IntList();
  /** Java numbers of the capturing groups (index: group number). */
  private int[] javaGroups;
  /** Case-insensitive matching mode. */
  private boolean insensitive;

  /**
   * Constructor.
   * @param regex regular expression to parse
   * @param strip strip whitespace while lexing
   * @param comments allow comments while lexing
   * @param all dot matches all
   * @param multi multi line search
   * @param insens case-insensitive matching
   */
  public RegExParser(final byte[] regex, final boolean strip, final boolean comments,
      final boolean all, final boolean multi, final boolean insens) {
    this(new RegExLexer(regex, strip, comments));
    dotAll = all;
    multiLine = multi;
    insensitive = insens;
  }

  /**
   * Returns the Java numbers of the capturing groups.
   * @return numbers (index: group number), or {@code null} if they are identical
   */
  public int[] groups() {
    return javaGroups;
  }

  /**
   * Assigns Java numbers to the capturing groups and to the markers of groups with back-references.
   */
  private void number() {
    final int[] java = new int[groups + 1];
    int n = 0;
    for(final int e : events.finish()) {
      if(e > 0) java[e] = ++n;
      else if(closed.get(-e).hasBackRef()) closed.get(-e).setMarker(++n);
    }
    for(int g = 1; g <= groups; g++) closed.get(g).setNumber(java[g]);
    if(n != groups) javaGroups = java;
  }

/**
   * Root production.
   * @return expression
   * @throws ParseException parsing exception
   */
  final public   RegExp parse() throws ParseException {RegExp regex;
    regex = regExp(false);
    jj_consume_token(0);
number();
      {if ("" != null) return regex;}
    throw new Error("Missing return statement in function");
}

/**
   * Parses the "regExp" rule.
   * @param lookbehind flag indicating lookbehind expression
   * @return expression
   * @throws ParseException parsing exception
   */
  final public   RegExp regExp(final boolean lookbehind) throws ParseException {final RegExpList brs = new RegExpList();
    RegExp br;
    atomPath.push(0);
    br = branch(lookbehind);
brs.add(br);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      jj_consume_token(OR);
atomPath.push(atomPath.pop() + 1);
      br = branch(lookbehind);
brs.add(br);
    }
atomPath.pop();
      {if ("" != null) return brs.size() == 1 ? brs.get(0) : new Disjunction(brs.finish());}
    throw new Error("Missing return statement in function");
}

/**
   * Parses the "branch" rule.
   * Parses the "piece" rule.
   * @param lookbehind flag indicating lookbehind expression
   * @return expression
   * @throws ParseException parsing exception
   */
  final public   RegExp branch(final boolean lookbehind) throws ParseException {RegExp atom;
    final RegExpList pieces = new RegExpList();
    Quantifier qu = null;
    atomPath.push(0);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NPAR_OPEN:
      case PAR_OPEN:
      case NAMED_PAR_OPEN:
      case CHAR:
      case DIGIT:
      case BACK_REF:
      case NAMED_BACK_REF:
      case WILDCARD:
      case SINGLE_ESC:
      case MULTI_ESC:
      case CAT_ESC:
      case BR_OPEN:
      case LINE_START:
      case LINE_END:
      case WORD_BOUNDARY:
      case POS_LOOKAHEAD:
      case NEG_LOOKAHEAD:
      case POS_LOOKBEHIND:
      case NEG_LOOKBEHIND:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NPAR_OPEN:
      case PAR_OPEN:
      case NAMED_PAR_OPEN:
      case CHAR:
      case DIGIT:
      case BACK_REF:
      case NAMED_BACK_REF:
      case WILDCARD:
      case SINGLE_ESC:
      case MULTI_ESC:
      case CAT_ESC:
      case BR_OPEN:{
        atom = atom(lookbehind);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case Q_MARK:
        case STAR:
        case PLUS:
        case QUANT_OPEN:{
          qu = quantifier();
if(lookbehind) {if (true) throw new ParseException("Lookbehind assertions must not contain quantifiers.");}
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          ;
        }
pieces.add(qu == null ? atom : new Piece(atom, qu));
            qu = null;
        break;
        }
      case LINE_START:
      case LINE_END:
      case WORD_BOUNDARY:
      case POS_LOOKAHEAD:
      case NEG_LOOKAHEAD:
      case POS_LOOKBEHIND:
      case NEG_LOOKBEHIND:{
        atom = assertion();
if(lookbehind) {if (true) throw new ParseException("Lookbehind assertions must not contain nested assertions.");}
            pieces.add(atom);
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
atomPath.push(atomPath.pop() + 1);
    }
atomPath.pop();
      {if ("" != null) return pieces.size() == 1 ? pieces.get(0) : new Branch(pieces.finish());}
    throw new Error("Missing return statement in function");
}

/**
   * Parses the "quantifier" rule.
   * @return expression
   * @throws ParseException parsing exception
   */
  final public   Quantifier quantifier() throws ParseException {int min = 0, max = 0;
    boolean lazy = false;
    int[] qu = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Q_MARK:{
      jj_consume_token(Q_MARK);
max = 1;
      break;
      }
    case STAR:{
      jj_consume_token(STAR);
max = -1;
      break;
      }
    case PLUS:{
      jj_consume_token(PLUS);
min = 1; max = -1;
      break;
      }
    case QUANT_OPEN:{
      jj_consume_token(QUANT_OPEN);
      qu = quantity();
min = qu[0]; max = qu[1];
      jj_consume_token(QUANT_CLOSE);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Q_MARK:{
      jj_consume_token(Q_MARK);
lazy = true;
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
{if ("" != null) return new Quantifier(min, max, lazy);}
    throw new Error("Missing return statement in function");
}

/**
   * Parses the "quantity" rule.
   * Parses the "quantRange" rule.
   * Parses the "quantMin" rule.
   * Parses the "quantExact" rule.
   * @return quantity
   * @throws ParseException parsing exception
   */
  final public   int[] quantity() throws ParseException {final int[] qty = new int[2];
    jj_consume_token(NUMBER);
try {
        qty[0] = qty[1] = Integer.parseInt((String) token.getValue());
      } catch(final NumberFormatException ex) {
        {if (true) throw new ParseException("Number in quantifier is too large");}
      }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COMMA:{
      jj_consume_token(COMMA);
qty[1] = -1;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBER:{
        jj_consume_token(NUMBER);
try {
            qty[1] = Integer.parseInt((String) token.getValue());
          } catch(final NumberFormatException ex) {
            {if (true) throw new ParseException("Number in quantifier is too large");}
          }
          if(qty[0] > qty[1]) {if (true) throw new ParseException("Illegal quantifier: " +
              qty[0] + " > " + qty[1]);}
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
{if ("" != null) return qty;}
    throw new Error("Missing return statement in function");
}

/**
   * Parses the "atom" rule.
   * @param lookbehind flag indicating lookbehind expression
   * @return expression
   * @throws ParseException parsing exception
   */
  final public   RegExp atom(final boolean lookbehind) throws ParseException {RegExp nd = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CHAR:
    case DIGIT:{
      nd = Char();
      break;
      }
    case WILDCARD:
    case SINGLE_ESC:
    case MULTI_ESC:
    case CAT_ESC:
    case BR_OPEN:{
      nd = charClass();
      break;
      }
    case NPAR_OPEN:{
      jj_consume_token(NPAR_OPEN);
      nd = regExp(false);
      jj_consume_token(PAR_CLOSE);
if(lookbehind) {if (true) throw new ParseException("Lookbehind assertions must not contain parenthesized expressions.");}
        nd = new Group(nd, false, atomPath.toArray(new Integer[atomPath.size()]));
      break;
      }
    case PAR_OPEN:{
      jj_consume_token(PAR_OPEN);
final int grp = ++groups; events.add(grp);
      nd = regExp(false);
      jj_consume_token(PAR_CLOSE);
if(lookbehind) {if (true) throw new ParseException("Lookbehind assertions must not contain parenthesized expressions.");}
        final Group g = new Group(nd, true, atomPath.toArray(new Integer[atomPath.size()]));
        closed.put(grp, g);
        events.add(-grp);
        nd = g;
      break;
      }
    case NAMED_PAR_OPEN:{
      jj_consume_token(NAMED_PAR_OPEN);
final int ngrp = ++groups; events.add(ngrp); final String name = (String) token.getValue();
      nd = regExp(false);
      jj_consume_token(PAR_CLOSE);
if(lookbehind) {if (true) throw new ParseException("Lookbehind assertions must not contain parenthesized expressions.");}
        final Group g = new Group(nd, true, name, atomPath.toArray(new Integer[atomPath.size()]));
        closed.put(ngrp, g);
        events.add(-ngrp);
        names.put(name, ngrp);
        nd = g;
      break;
      }
    case BACK_REF:
    case NAMED_BACK_REF:{
      nd = backReference();
if(lookbehind) {if (true) throw new ParseException("Lookbehind assertions must not contain backward references.");}
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return nd;}
    throw new Error("Missing return statement in function");
}

/**
   * Parses the "Char" rule.
   * @return expression
   * @throws ParseException parsing exception
   */
  final public   Literal Char() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CHAR:{
      jj_consume_token(CHAR);
      break;
      }
    case DIGIT:{
      jj_consume_token(DIGIT);
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return new Literal(token.image.codePointAt(0), insensitive);}
    throw new Error("Missing return statement in function");
}

/**
   * Parses the "backReference" rule.
   * @return expression
   * @throws ParseException parsing exception
   */
  final public   BackRef backReference() throws ParseException {int backref = 0;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case BACK_REF:{
      jj_consume_token(BACK_REF);
backref = token.image.charAt(1) - '0';
      label_3:
      while (true) {
        if (jj_2_1(1) && (10 * backref + token.next.image.charAt(0) - '0' <= groups)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(DIGIT);
backref = 10 * backref + token.image.charAt(0) - '0';
      }
      break;
      }
    case NAMED_BACK_REF:{
      jj_consume_token(NAMED_BACK_REF);
final Integer num = names.get((String) token.getValue());
        if(num == null) {if (true) throw new ParseException("Illegal back-reference: " + token.image);}
        backref = num;
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
final Group g = closed.get(backref);
      if(g == null)
        {if (true) throw new ParseException("Illegal back-reference: \\" + backref);}
      int diff = 0;
      while(atomPath.get(diff) == g.getAtomPath()[diff]) {
        ++diff;
      }
      // If the atom paths of group and backref differ in a branch (even index), the backref is in
      // a different branch than the group, so the backref can be flagged accordingly, and later be
      // omitted at serialization time.
      final boolean isDifferentBranch = (diff & 1) == 0;
      if(!isDifferentBranch) g.setHasBackRef();
      {if ("" != null) return new BackRef(g, isDifferentBranch, insensitive);}
    throw new Error("Missing return statement in function");
}

/**
   * Parses the "charClass" rule.
   * @return expression
   * @throws ParseException parsing exception
   */
  final public   RegExp charClass() throws ParseException {RegExp nd = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SINGLE_ESC:
    case MULTI_ESC:
    case CAT_ESC:{
      nd = charClassEsc();
      break;
      }
    case BR_OPEN:{
      nd = charClassExpr();
      break;
      }
    case WILDCARD:{
      jj_consume_token(WILDCARD);
nd = Wildcard.get(dotAll);
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return nd;}
    throw new Error("Missing return statement in function");
}

/**
   * Parses the "charClassEsc" rule.
   * @return expression
   * @throws ParseException parsing exception
   */
  final public   RegExp charClassEsc() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SINGLE_ESC:{
      jj_consume_token(SINGLE_ESC);
      break;
      }
    case MULTI_ESC:{
      jj_consume_token(MULTI_ESC);
      break;
      }
    case CAT_ESC:{
      jj_consume_token(CAT_ESC);
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
final RegExp esc = Escape.get(token.image);
      if(esc == null) {if (true) throw new ParseException("Unknown escape: " + token);}
      {if ("" != null) return esc;}
    throw new Error("Missing return statement in function");
}

/**
   * Parses the "charClassExpr" rule.
   * Parses the "charClassSub" rule.
   * @return character class
   * @throws ParseException parsing exception
   */
  final public   CharClass charClassExpr() throws ParseException {CharGroup group = null;
    CharClass sub = null;
    jj_consume_token(BR_OPEN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NEG:{
      jj_consume_token(NEG);
      group = posCharGroup();
group.negative = true;
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      if (jj_2_2(1)) {
        group = posCharGroup();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TO:{
      jj_consume_token(TO);
      sub = charClassExpr();
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    jj_consume_token(BR_CLOSE);
{if ("" != null) return new CharClass(group, sub);}
    throw new Error("Missing return statement in function");
}

/**
   * Parses the "posCharGroup" rule.
   * @return character group
   * @throws ParseException parsing exception
   */
  final public   CharGroup posCharGroup() throws ParseException {final RegExpList cg = new RegExpList();
    RegExp sub = null;
    label_4:
    while (true) {
      if (jj_2_3(3)) {
        sub = charRange(cg.isEmpty());
cg.add(sub);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SINGLE_ESC:
        case MULTI_ESC:
        case CAT_ESC:{
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case SINGLE_ESC:{
            jj_consume_token(SINGLE_ESC);
            break;
            }
          case MULTI_ESC:{
            jj_consume_token(MULTI_ESC);
            break;
            }
          case CAT_ESC:{
            jj_consume_token(CAT_ESC);
            break;
            }
          default:
            jj_la1[15] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
for(final RegExp re : Escape.inGroup(token.image)) cg.add(re);
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      if (jj_2_4(1)) {
        ;
      } else {
        break label_4;
      }
    }
{if ("" != null) return new CharGroup(cg.finish());}
    throw new Error("Missing return statement in function");
}

/**
   * Parses the "charRange" rule.
   * @return expression
   * @throws ParseException parsing exception
   */
  final public   RegExp charRange(boolean isBegin) throws ParseException {int a = -1, b = -1;
    if (getToken(2).kind == CHAR && "-".equals(getToken(2).image)
            && getToken(3).kind != BR_CLOSE && getToken(3).kind != EOF) {
      a = charOrEsc();
      jj_consume_token(CHAR);
      b = charOrEsc();
if(a > b) {if (true) throw new ParseException("Illegal range: " +
            Literal.escape(a) + " > " + Literal.escape(b));}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CHAR:
      case DIGIT:{
        a = XmlChar();
if(a == '-' && !isBegin && getToken(1).kind != BR_CLOSE && getToken(1).kind != EOF) {if (true) throw new ParseException(
          "The - character is a valid character range only at the beginning or end of a positive character group.");}
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return b == -1 ? new Literal(a, insensitive) : new CharRange(a, b, insensitive);}
    throw new Error("Missing return statement in function");
}

/**
   * Parses the "charOrEsc" rule.
   * @return character
   * @throws ParseException parsing exception
   */
  final public   int charOrEsc() throws ParseException {int cp = -1;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CHAR:
    case DIGIT:{
      cp = XmlChar();
      break;
      }
    case SINGLE_ESC:{
      jj_consume_token(SINGLE_ESC);
cp = Escape.getCp(token.image);
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return cp;}
    throw new Error("Missing return statement in function");
}
